# Vineyard_navigation_robot

./: README.md
0x_Delta_XL/deltaxl/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_arena/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_arena/launch/: deltaXL_vineyard_arena_01.launch  deltaXL_vineyard_world.launch
0x_Delta_XL/deltaxl_arena/models/terrain_1/: model.sdf
0x_Delta_XL/deltaxl_arena/models/terrain_2/: model.config  model.sdf
0x_Delta_XL/deltaxl_arena/models/terrain_2/media/: terrain_2.dae
0x_Delta_XL/deltaxl_arena/worlds/: nrcg_terrain_1.world
0x_Delta_XL/deltaxl_control/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_control/config/: control.yaml  gazebo_ur5_control.yaml  robot_localization.yaml  teleop_logitech.yaml  teleop_ps4.yaml
0x_Delta_XL/deltaxl_control/launch/: control.launch  teleop.launch
0x_Delta_XL/deltaxl_description/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_description/launch/: description.launch  view_robot.launch
0x_Delta_XL/deltaxl_description/meshes/: Arch_Full.dae  Arch_Full.stl  Arch_Reduced.dae  Arch_Reduced.stl  Delta_XL_V6.dae  Delta_XL_V6.stl  Delta_XL_V8.dae  Delta_XL_V8.stl  Wheel7.dae
0x_Delta_XL/deltaxl_description/meshes/sensors/: UTM_30_LX.dae  UTM_30_LX.stl
0x_Delta_XL/deltaxl_description/urdf/: _d435.urdf.xacro  deltaXL.urdf.xacro  gps.gazebo.xacro  mtk3339.urdf.xacro
0x_Delta_XL/deltaxl_gazebo/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_gazebo/launch/: deltaXL_arena_01.launch  deltaXL_world.launch  spawn_deltaXL.launch
0x_Delta_XL/deltaxl_gazebo/worlds/: deltaxl_arena_02.world  deltaxl_arena_03.world  deltaxl_arena_04.world  deltaxl_arena_05.world  deltaxl_arena_06.world
0x_Delta_XL/deltaxl_msgs/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_msgs/msg/: DeltaXLStatus.msg
0x_Delta_XL/deltaxl_navigation/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_navigation/config/: costmap_common.yaml  planner.yaml
0x_Delta_XL/deltaxl_navigation/launch/: amcl_demo.launch  exploration.launch  exploration_demo.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
0x_Delta_XL/deltaxl_navigation/maps/: nex_world_01.yaml
0x_Delta_XL/deltaxl_robot/: README.md
0x_Delta_XL/deltaxl_robot/deltaxl_base/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_robot/deltaxl_base/include/deltaxl_base/: 0xRobotcpplib.h  deltaxl_diagnostics.h  deltaxl_hardware.h
0x_Delta_XL/deltaxl_robot/deltaxl_base/launch/: base.launch
0x_Delta_XL/deltaxl_robot/deltaxl_base/src/: deltaxl_base.cpp  deltaxl_diagnostics.cpp  deltaxl_hardware.cpp
0x_Delta_XL/deltaxl_robot/deltaxl_bringup/: CMakeLists.txt  README.md  package.xml
0x_Delta_XL/deltaxl_robot/deltaxl_bringup/launch/hokuyo_config/: utm30lx.launch
0x_Delta_XL/deltaxl_robot/deltaxl_bringup/launch/um7_config/: um7.launch
0x_Delta_XL/deltaxl_robot/deltaxl_bringup/scripts/: calibrate_compass  create_udev_rules_GPS.sh  create_udev_rules_RazorIMU.sh  create_udev_rules_Robot.sh  create_udev_rules_UM7IMU.sh  delete_udev_rules_GPS.sh  delete_udev_rules_RazorIMU.sh  delete_udev_rules_Robot.sh  delete_udev_rules_UM7IMU.sh  gps.rules  install  razorIMU.rules  robot.rules  um7IMU.rules
0x_Delta_XL/deltaxl_robot/deltaxl_robot/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_trajectory_control/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_trajectory_control/scripts/: local_centre_lane.py  local_centre_lane_2.py  local_centre_lane_3.py  local_centre_lane_4.py  local_centre_lane_5.py  new_point_cloud.py  trial.py  waypoint_controller.py
0x_Delta_XL/deltaxl_viz/: CMakeLists.txt  package.xml
0x_Delta_XL/deltaxl_viz/launch/: view_diagnostics.launch  view_model.launch  view_robot.launch
0x_Delta_XL/deltaxl_viz/rviz/: model.rviz  robot.rviz
gps_localization/: CMakeLists.txt  package.xml
gps_localization/config/: ekf_localization.yaml
gps_localization/launch/: ekf_localization.launch  gps_localization.launch  gps_localization_1.launch  start_map_server.launch  start_navsat_transform.launch
gps_localization/maps/: my_map_empty.pgm  my_map_empty.yaml
gps_localization/scripts/: gps_to_odom_converter.py
lane_following/: CMakeLists.txt  local_centre_lane_5.py  local_centre_lane_6.py  local_centre_lane_7.py  local_centre_lane_8.py  local_centre_lane_9.py  package.xml  plot_trajectory.py  trajectory_log.csv  trajectory_log_1.csv  trajectory_logger.py  trial.py  waypoint_controller.py
