<?xml version="1.0"?>
<package>
  <name>deltaxl_arena</name>
  <version>0.0.0</version>
  <description>Launch files for new arena</description>

  <maintainer email="sheyash@gadgil.com">ros</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/0x</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
