<?xml version="1.0"?>
<package>
  <name>deltaxl_control</name>
  <version>0.0.0</version>
  <description>Controllers for 0xDeltaXL Robot</description>
  <maintainer email="info@nex-robotics.com">Nex Robotics</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/0x</url>
  <author email="info@nex-robotics.com">Nex Robotics</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
