<?xml version="1.0"?>
<package>
  <name>deltaxl_description</name>
  <version>0.0.0</version>
  <description>URDF robot description for Delta XL robot</description>

  <maintainer email="info@nex-robotics.com">Nex Robotics</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
