<?xml version="1.0"?>
<package>
  <name>deltaxl_msgs</name>
  <version>0.0.1</version>
  <description>Messages for Nex Robotics DeltaXL</description>

  <author email="info@nex-robotics.com">Nex Robotics</author>

  <maintainer email="rosdev@nex-robotics.com">Nex Robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
