<?xml version="1.0"?>
<package>
  <name>deltaxl_navigation</name>
  <version>0.6.9</version>
  <description>Autonomous mapping and navigation demos for the 0xDeltaXL</description>

  <author email="info@clearpathrobotics.com">Nex Robotics</author>

  <maintainer email="info@nex-robotics.com">Nex Robotics</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/0x</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <!-- Disabling till package is released -->
  <!-- <run_depend>frontier_exploration</run_depend> -->
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
