<?xml version="1.0"?>
<package>
  <name>deltaxl_viz</name>
  <version>0.6.9</version>
  <description>Visualization configuration for the 0xDeltaXL</description>

  <author email="info@clearpathrobotics.com">Nex Robotics</author>

  <maintainer email="info@nex-robotics.com">Nex Robotics</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/0x</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>deltaxl_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_console</run_depend>
  <run_depend>rqt_robot_monitor</run_depend>

  <export>
  </export>
</package>
