<?xml version="1.0"?>
<package>
  <name>deltaxl_bringup</name>
  <version>0.1.1</version>
  <description>Nex Robotics DeltaXL robot installation and integration package</description>

  <author email="info@nex-robotics.com">Nex Robotics</author>

  <maintainer email="info@nex-robotics.com">Nex Robotics</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>deltaxl_base</run_depend>
  <run_depend>deltaxl_control</run_depend>
  <run_depend>deltaxl_description</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>imu_transformer</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>microstrain_3dmgx2_imu</run_depend>
  <run_depend>microstrain_inertial_driver</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>python3-scipy</run_depend>
  <run_depend>realsense2_camera</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>robot_upstart</run_depend>
  <run_depend>spinnaker_camera_driver</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>um6</run_depend>
  <run_depend>um7</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>

  <export>
  </export>
</package>
