<?xml version="1.0"?>
<package>
  <name>deltaxl_robot</name>
  <version>0.1.1</version>
  <description>Metapackage for Nex Robotics DeltaXL robot software</description>

  <maintainer email="info@nex-robotics.com">Nex Robotics</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>deltaxl_bringup</run_depend>
  <run_depend>deltaxl_base</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
